--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,19 +5,20 @@
 }
 
 .header img {
-  width: 170px;
+  width: 120px;
   margin-left: 1em;
 }
 
 .nav {
   display: flex;
-  margin-left: 4em;
+  margin-left: 2em;
+  flex-wrap: wrap;
 }
 
 .nav__btn {
   text-decoration: none;
   color: #000000;
-  font-size: 30px;
+  font-size: 20px;
   margin: 0 1em;
 }
 
@@ -27,6 +28,10 @@
 
 .nav__btn--active {
   border-bottom: 2px solid black;
+}
+
+.nav__btn--active:hover {
+  border-bottom: 2px solid #555555;
 }
 
 
