--- a/styles/nav.css
+++ b/styles/nav.css
@@ -13,7 +13,10 @@
 }
 
 .header__container {
+  margin-right: 120px;
   margin-bottom: 0.75em;
+  justify-self: center;
+  width: 100%;
 }
 
 .site-title h1 {
@@ -23,8 +26,8 @@
 
 .nav {
   display: flex;
-  margin-left: 2em;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .nav__btn {
